<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/holo_green_light"
    android:visibility="visible"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainActivity"
    tools:showIn="@layout/activity_main">

    <RadioGroup
        android:id="@+id/TimeMode"
        android:layout_width="0dp"
        android:layout_height="107dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="28dp"
        android:focusable="auto"
        android:gravity="start"
        android:orientation="vertical"
        android:soundEffectsEnabled="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RadioButton
            android:id="@+id/radioButtonFull"
            android:layout_width="218dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:checked="true"
            android:hint="@string/full_time"
            android:text="@string/full_time_7h_38min"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            tools:focusable="auto" />

        <RadioButton
            android:id="@+id/radioButtonPart"
            android:layout_width="218dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:checked="false"
            android:hint="@string/part_time"
            android:text="@string/part_time_5h"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

    </RadioGroup>


    <EditText
        android:id="@+id/editText_ora_in"
        android:layout_width="73dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="276dp"
        android:layout_marginTop="168dp"
        android:ems="10"
        android:inputType="time"
        android:text="@string/ora_in"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:autoText="@tools:sample/date/hhmm"
        tools:editable="false"
        android:autofillHints="" />

    <EditText
        android:id="@+id/editText_ora_im"
        android:layout_width="73dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="276dp"
        android:layout_marginTop="240dp"
        android:ems="10"
        android:inputType="time"
        android:text="@string/init_mensa"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:autoText="@tools:sample/date/hhmm"
        tools:editable="false"
        android:autofillHints="" />

    <EditText
        android:id="@+id/editText_ora_fm"
        android:layout_width="73dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="276dp"
        android:layout_marginTop="316dp"
        android:ems="10"
        android:inputType="time"
        android:text="@string/fine_pausa"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:autoText="@tools:sample/date/hhmm"
        tools:editable="false"
        android:autofillHints="" />

    <TextView
        android:id="@+id/TextView6"
        android:layout_width="137dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginTop="504dp"
        android:text="@string/ora_di_uscita"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/TextView5"
        android:layout_width="104dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="216dp"
        android:text="@string/minuti"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"
        app:layout_constraintBottom_toBottomOf="@+id/TextViewIntervallo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/TextViewIntervallo" />

    <TextView
        android:id="@+id/TextView4"
        android:layout_width="104dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginTop="416dp"
        android:text="@string/intervallo"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/TextView3"
        android:layout_width="190dp"
        android:layout_height="29dp"
        android:layout_marginTop="324dp"
        android:gravity="end"
        android:text="@string/fine_pausa_m"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"
        app:layout_constraintEnd_toEndOf="@+id/TextView2"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/TextView2"
        android:layout_width="190dp"
        android:layout_height="29dp"
        android:layout_marginTop="40dp"
        android:gravity="end"
        android:text="@string/inizio_pausa"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"
        app:layout_constraintEnd_toEndOf="@+id/TextView1"
        app:layout_constraintTop_toBottomOf="@+id/TextView1" />

    <TextView
        android:id="@+id/TextView1"
        android:layout_width="190dp"
        android:layout_height="29dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="180dp"
        android:gravity="end"
        android:text="@string/ora_ingresso"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/TextView_ora_exit"
        android:layout_width="98dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="204dp"
        android:layout_marginTop="516dp"
        android:ems="10"
        android:text="@string/ora_exit"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"
        android:textColor="@color/colorPrimary"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="@+id/TextView6"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.73" />

    <TextView
        android:id="@+id/TextViewIntervallo"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="152dp"
        android:ems="10"
        android:gravity="center_horizontal"
        android:text="@string/break_time"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"
        android:textColor="@color/colorPrimary"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="@+id/TextView4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/TextView4" />

</android.support.constraint.ConstraintLayout>